[project]
name = "esri-indexer"
version = "0.1.0"
description = "A little web app that indexes geographic data layers available via ESRI REST endpoints so they are searchable."
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.11,<4.0"
dependencies = [
    "flask",
    "flask-migrate",
    "flask-sqlalchemy",
    "gunicorn",
    "psycopg2-binary",
    "redis",
    "requests",
    "rq",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "pre-commit",
    "black",
    "isort",
    "flake8",
]

[tool.uv]
dev-dependencies = [
    "pylint",
    "pre-commit",
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app", "models", "indexer"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "migrations",
]
